# PIDL-sound-field-reconstruction

./: .gitignore  README.md  pyproject.toml
pidlsfr/: metrics.py  multifrequency_helmoltz_dl.py  multifrequency_sinc_bl.py  pidl_core.py  utils.py
